--- a/package.json
+++ b/package.json
@@ -22,11 +22,27 @@
   },
   "homepage": "https://github.com/VictorPaniello/bpaniello-portfolio#readme",
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.4",
+    "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
