--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0"
   }
 }
