--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "1.0.6",
+    "@react-email/render": "2.0.4",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "class-variance-authority": "^0.7.1",
