tw-: removed from all files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "incremental": true,
     "module": "esnext",
     "esModuleInterop": true,
+    "ignoreDeprecations": "6.0",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
