--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@react-email/render": "2.0.4",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
+    "@vercel/blob": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
